layout bug fix

--- a/assets/style/cmps/job-index-header.css
+++ b/assets/style/cmps/job-index-header.css
@@ -4,9 +4,9 @@
     align-items: center; /* Centers items vertically */
     justify-content: space-between;
     padding: 15px;
+    box-sizing: border-box;
     background-color:rgb(63, 88, 199);
     width: 100%;
-    height: 25px;
     gap: 20px;
 }
 
